fix potential horizontal scroll offcanvas on mobile

--- a/_front-end/src/assets/toolkit/styles/base/_layout.scss
+++ b/_front-end/src/assets/toolkit/styles/base/_layout.scss
@@ -17,6 +17,11 @@ body {
   height: 100%;
 }
 
+// for okaynav offcanvas menu
+html, body {
+  overflow-x: hidden;
+}
+
 /**
  * FLexbox Sticky Footer
  * 1. Avoid the IE 10-11 `min-height` bug.
@@ -29,10 +34,6 @@ body {
   display: flex;
   flex-direction: column;
   height: 100%; /* 1, 3 */
-
-  &.-syncing {
-    overflow: hidden;
-  }
 }
 
 .site-header,
